...
"About" = "About";
"Libraries" = "Libraries";
"Account" = "Account";
"Acknowledgements" = "Acknowledgements";
"Loading... Please wait." = "Loading... Please wait.";
"BarcodeOrUsername" = "Barcode or Username";
"Borrow" = "Get";
"BorrowFailed" = "Borrowing failed";
"BorrowCouldNotBeCompletedFormat" = "Borrowing %@ could not be completed.";
"Cancel" = "Cancel";
"Catalog" = "Catalog";
"Categories" = "Categories";
"Category" = "Category";
"CheckConnection" = "Please check your connection and try again.";
"Close" = "Close";
"ConnectionFailed" = "Connection Failed";
"Unable to load the web page at this time." = "Unable to load the web page at this time.";
"Content Licenses" = "Content Licenses";
"We found a problem. Please check your connection or close and reopen the app to retry." = "We found a problem. Please check your connection and your credentials in Settings, or close and reopen the app to retry.";
"Delete" = "Delete";
"Description" = "Description";
...
